# flexible-shared-memory

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: DEVELOPMENT.md
research/: test-planning.md
source/flexible_shared_memory/: __init__.py  shared_memory.py
tests/: test_field_status.py  test_fifo.py  test_multiprocess.py  test_read_basic.py  test_value_conversion.py  test_write_basic.py
